# SLMTeacher

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CLAUDE_EVAL_GUIDE.md  CONTRIBUTING.md  CORRECTION_SUMMARY.md  EVALUATOR_OPTIONS.md  HF_MODEL_TRAINING_GUIDE.md  Information.md  LICENSE  OPTIMIZATION_SUMMARY.md  OPTIMIZED_RLT_GUIDE.md  PROJECT_ANALYSIS.md  PROJECT_ANALYSIS_SUMMARY.md  README.md  README_RLT.md  RLT_ENHANCEMENT_SUMMARY.md  RLT_Enhanced_Quick_Start.ipynb  RLT_Implementation_Synthesis.md  RLT_Teacher_Student_Training.ipynb  TRAINING_OPTIONS_SUMMARY.md  Train_HF_Model_RLT.ipynb  check_setup.py  optimized_rlt_config_example.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup_data_pipeline.py  test_live_run.py  test_notebook.py  test_results.json  train.py  train_optimized_rlt.py  train_optimized_rlt_claude_eval.py  train_optimized_rlt_corrected.py  train_rlt_model.py
.claude/: config.json
.github/workflows/: ci.yml
memory/data/: entries.json
src/: __init__.py
src/data/: README.md  __init__.py  cache_manager.py  curriculum_generator.py  data_loader.py  data_processor.py  example_usage.py  explanation_generator.py  test_data_pipeline.py
src/models/: __init__.py  hf_teacher_model.py  optimized_model.py
src/rewards/: README.md  __init__.py  claude_evaluator.py  example_usage.py  kl_divergence.py  reward_function.py  reward_utils.py  student_evaluator.py
src/teachers/: README.md  __init__.py  claude_teacher.py  claude_teacher_example.py  notebook_integration.py  test_claude_teacher.py
src/training/: __init__.py  adaptive_data_selector.py  continuous_trainer.py  grpo_trainer.py  grpo_trainer_corrected.py  performance_tracker.py  student_assessor.py
src/utils/: __init__.py  cost_tracker.py
tests/: test_adaptive_selector.py  test_answer_comparison.py  test_claude_teacher.py  test_cost_tracker.py  test_curriculum_generator.py  test_e2e_training.py  test_explanation_dataset.py  test_grpo_config.py  test_memory_monitor.py  test_performance_tracker.py  test_reward_function.py  test_reward_utils.py  test_student_assessor.py
(+4 files in other folders)
